package cmsg_proxy;

import "common.proto";

service functional_tests
{
    rpc test_single_bool_get (dummy) returns (ant_result_plus_bool) {
        option http = {
            get: "/v1/test_single_bool_get",
        };
    }
}
